[workspace]
members = [
    # In the near future the `internal_ws` directory is going to be a
    # separately compiled workspace (with optimisations).
    # https://github.com/softdevteam/yk/pull/205
    "internal_ws/ykcompile",
    "internal_ws/ykpack",
    "internal_ws/yktrace",
    "internal_ws/ykview",
    "internal_ws/ykbh",
    "ykrt",
]

[profile.dev]
panic = "abort"
