[package]
name = "c_tests"
version = "0.1.0"
authors = ["The Yorick Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[[test]]
name = "c_tests"
path = "run.rs"
harness = false

[dependencies]
regex = "1.5.4"

[dev-dependencies]
lang_tester = "0.7.0"
once_cell = "1.8.0"
tempfile = "3.2.0"
ykcapi = { path = "../ykcapi", features = ["c_testing"] }
