[package]
name = "hwtracer"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
libc = "0.2.148"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
deku = "0.16.0"
ykaddr = { path = "../ykaddr" }
intervaltree = "0.2.7"
byteorder = "1.4.3"
leb128 = "0.2.5"
thiserror = "1"
memmap2 = "0.9.4"

[dependencies.object]
version = "0.32"
default-features = false
features = ["read_core", "elf"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
iced-x86 = { version = "1.18.0", features = ["decoder"]}

[build-dependencies]
cc = "1.0.83"
rerun_except = "1"
ykbuild = { path = "../ykbuild" }
