[package]
name = "hwtracer"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
byteorder = "1.4.3"
deku = "0.18.1"
intervaltree = "0.2.7"
leb128 = "0.2.5"
libc = "0.2.148"
memmap2 = "0.9.4"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
thiserror = "2.0.12"
ykaddr = { path = "../ykaddr" }

[dependencies.object]
version = "0.36.7"
default-features = false
features = ["read_core", "elf"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
iced-x86 = { version = "1.18.0", features = ["decoder"]}

[build-dependencies]
cc = "1.0.83"
rerun_except = "1"
ykbuild = { path = "../ykbuild" }
