[package]
name = "tests"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
# cdylib is reuired for the `hwtracer_ykpt` suite.
crate-type = ["lib", "cdylib"]

[[test]]
name = "c_tests"
path = "langtest_c.rs"
harness = false

[[test]]
name = "trace_compiler_tests"
path = "langtest_trace_compiler.rs"
harness = false

[[test]]
name = "ir_lowering_tests"
path = "langtest_ir_lowering.rs"
harness = false

[dependencies]
clap = { features = ["derive"], version = "4.4" }
hwtracer = { path = "../hwtracer" }
memmap2 = "0.7"
regex = "1.9"
tempfile = "3.8"
ykbuild = { path = "../ykbuild" }
ykrt = { path = "../ykrt", features = ["yk_testing", "yk_jitstate_debug"] }
yktracec = { path = "../yktracec", features = ["yk_testing"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
lang_tester = "0.7.6"
ykcapi = { path = "../ykcapi", features = ["yk_testing"] }
yktracec = { path = "../yktracec", features = ["yk_testing"] }
ykrt = { path = "../ykrt", features = ["yk_testing", "yk_jitstate_debug"] }

[build-dependencies]
rerun_except = "1.0.0"
ykbuild = { path = "../ykbuild" }

[[bench]]
name = "collect_and_decode"
harness = false

[[bench]]
name = "promote"
harness = false
