[package]
name = "tests"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
# cdylib is reuired for the `hwtracer_ykpt` suite.
crate-type = ["lib", "cdylib"]

[[test]]
name = "c_tests"
path = "langtest_c.rs"
harness = false

[[test]]
name = "lua_tests"
path = "langtest_lua.rs"
harness = false

[[test]]
name = "ir_lowering_tests"
path = "langtest_ir_lowering.rs"
harness = false

[dependencies]
clap = { features = ["derive"], version = "4.4" }
fs4 = { version="0.13.1", features=["sync"] }
hwtracer = { path = "../hwtracer" }
memmap2 = "0.9.4"
num_cpus = "1.13.1"
regex = "1.9"
tempfile = "3.9.0"
ykbuild = { path = "../ykbuild" }
ykrt = { path = "../ykrt", features = ["yk_testing", "ykd"] }
ykcapi = { path = "../ykcapi", features = ["yk_testing", "ykd"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
lang_tester = "0.9"

[build-dependencies]
rerun_except = "1.0.0"
ykbuild = { path = "../ykbuild" }

[[bench]]
name = "collect_and_decode"
harness = false

[[bench]]
name = "promote"
harness = false
