[package]
name = "tests"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["lib", "cdylib"]

[[test]]
name = "c_tests"
path = "langtest_c.rs"
harness = false

[[test]]
name = "lua_tests"
path = "langtest_lua.rs"
harness = false

[[test]]
name = "ir_lowering_tests"
path = "langtest_ir_lowering.rs"
harness = false

[dependencies]
clap = { features = ["derive"], version = "4.4" }
fs4 = { version="0.13.1", features=["sync"] }
memmap2 = "0.9.4"
num_cpus = "1.13.1"
regex = "1.9"
tempfile = "3.9.0"
ykbuild = { path = "../ykbuild" }
ykrt = { path = "../ykrt", features = ["yk_testing", "ykd"] }
ykcapi = { path = "../ykcapi", features = ["yk_testing", "ykd"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
lang_tester = "0.9"

[build-dependencies]
rerun_except = "1.0.0"
ykbuild = { path = "../ykbuild" }

[[bench]]
name = "promote"
harness = false
