[package]
name = "ykaddr"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
cached = { version = "0.55.1", features = ["proc_macro"] }
libc = "0.2"
memmap2 = "0.9.4"
phdrs = { git = "https://github.com/softdevteam/phdrs" }

[build-dependencies]
cc = "1.0.83"
