[package]
name = "ykbh"
version = "0.1.0"
authors = ["Lukas Diekmann <lukas.diekmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yktrace = { path = "../yktrace" }
ykpack = { path = "../ykpack" }
ykcompile = { path = "../ykcompile" }
