[package]
name = "ykbuild"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"
# The following makes ykbuild's cargo metadata available to any crate which
# depends on it, providing depedents with the location of the ykllvm install dir.
links = "ykbuild"

[dependencies]
glob = "0.3.1"
tempfile = "3.8"

[build-dependencies]
fs4 = "0.7.0"
rerun_except = "1.0.0"
which = "6.0.0"
