[package]
name = "ykcapi"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
hwtracer = { path = "../hwtracer" }
libc = "0.2.117"
ykllvmwrap = { path = "../ykllvmwrap" }
ykrt = { path = "../ykrt" }
yktrace = { path = "../yktrace" }
yksmp = { path = "../yksmp" }
ykfr = { path = "../ykfr" }
llvm-sys = "130"

[features]
yk_testing = []
yk_jitstate_debug = []
