[package]
name = "ykcapi"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.148"
ykrt = { path = "../ykrt" }

[build-dependencies]
ykbuild = { path = "../ykbuild" }

[features]
yk_testing = ["ykrt/yk_testing"]
ykd = []
