[package]
name = "ykcompile"
version = "0.1.0"
authors = ["Lukas Diekmann <lukas.diekmann@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yktrace = { path = "../yktrace" }
ykpack = { path = "../ykpack" }
dynasmrt = "0.7"
hex = "0.4"
libc = "0.2"
fm = { git = "https://github.com/softdevteam/fm", rev = "12dcee1ee75f625942ffa889ef4d4e1fcf850832" }
regex = "1"

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"
