[package]
name = "ykcompile"
version = "0.1.0"
authors = ["Lukas Diekmann <lukas.diekmann@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yktrace = { path = "../yktrace" }
ykpack = { path = "../ykpack" }
dynasmrt = "0.7"
hex = "0.4"
libc = "0.2"
fm = "0.1.4"
regex = "1"
lazy_static = "1.4.0"

[build-dependencies]
cc = "1.0"
