[package]
name = "ykcompile"
version = "0.1.0"
authors = ["Lukas Diekmann <lukas.diekmann@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yktrace = { path = "../yktrace" }
ykpack = { path = "../ykpack" }
dynasmrt = "1.0.0"
hex = "0.4.2"
libc = "0.2.80"
lazy_static = "1.4.0"

[build-dependencies]
cc = "1.0.62"

[dev-dependencies]
fm = "0.1.4"
regex = "1.4.2"
