[package]
name = "ykfr"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
libc = "0.2.97"
libffi = "3.0.0"
ykutil = { path = "../ykutil" }
yksmp = { path = "../yksmp" }
memmap2 = "0.6"

[dependencies.llvm-sys]
# note: using a git version to get llvm linkage features in llvm-sys (not in a
# release at the time of writing)
git = "https://gitlab.com/taricorp/llvm-sys.rs"
rev = "678b3da2b2239ae12766c964e6e613c0d82b5f37"
# because yk already links llvm elsewhere.
features = ["no-llvm-linking"]

[dependencies.object]
version = "0.31"
default-features = false
features = ["read_core", "elf"]

[features]
c_testing = []
