[package]
name = "ykllvmwrap"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
cc = "1.0.72"
libc = "0.2.117"
ykutil = { path = "../ykutil" }

[build-dependencies]
cc = "1.0.72"
glob = "0.3.1"
rerun_except = "1.0.0"
tempfile = "3.4.0"

[features]
yk_testing = []
