[package]
name = "ykrt"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
byteorder = "1.4.3"
deku = { version = "0.16.0", features = ["std"] }
hwtracer = { path = "../hwtracer" }
libc = "0.2.148"
memmap2 = "0.9"
num_cpus = "1.13.1"
parking_lot = "0.12.0"
parking_lot_core = "0.9.1"
tempfile = "3.8"
ykaddr = { path = "../ykaddr" }
yksmp = { path = "../yksmp" }
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
yktracec = { path = "../yktracec" }
static_assertions = "1.1.0"
typed-index-collections = "3.1.0"
thiserror = "1.0.56"
dynasmrt = "2.0.0"
iced-x86 = { version = "1.21.0", features = ["decoder", "std"] }

[dependencies.llvm-sys]
# note: using a git version to get llvm linkage features in llvm-sys (not in a
# release at the time of writing)
git = "https://gitlab.com/taricorp/llvm-sys.rs"
rev = "678b3da2b2239ae12766c964e6e613c0d82b5f37"
# because yk already links llvm elsewhere.
features = ["no-llvm-linking"]

[dependencies.object]
version = "0.32"
default-features = false
features = ["read_core", "elf"]

[build-dependencies]
regex = "1.9"
ykbuild = { path = "../ykbuild" }

[features]
yk_jitstate_debug = []
yk_testing = []

[dev-dependencies]
fm = "0.2.2"
num-traits = "0.2.16"
