[package]
name = "ykrt"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
byteorder = "1.4.3"
deku = { version = "0.16.0", features = ["std"] }
dynasmrt = "3.0.0"
indexmap = "2.2.6"
libc = "0.2.148"
memmap2 = "0.9"
num-traits = "0.2.16"
num_cpus = "1.13.1"
parking_lot = "0.12.0"
parking_lot_core = "0.9.1"
static_assertions = "1.1.0"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
tempfile = "3.8"
thiserror = "1.0.56"
typed-index-collections = "3.1.0"
vob = "3.0.3"
ykaddr = { path = "../ykaddr" }
yksmp = { path = "../yksmp" }
zydis = "4.1.0"

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
hwtracer = { path = "../hwtracer" }

[dependencies.object]
version = "0.34.0"
default-features = false
features = ["read_core", "elf"]

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
regex = "1.9"
ykbuild = { path = "../ykbuild" }

[features]
# When set, the `ykd` feature enables a number of features that are helpful for
# debugging the correctness and performance of an interpreter, most controlled
# by `YKD_*` environment variables.
ykd = []
# The `yk_testing` feature is purely for yk's internal use: do not use it
# externally.
yk_testing = []

[dev-dependencies]
cfgrammar = "0.13"
fm = "0.4.0"
lazy_static = "1.5.0"
lrlex = "0.13"
lrpar = "0.13"
regex = { version = "1.9", features = ["std"] }
