[package]
name = "ykrt"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
array-concat = "0.5.5"
byteorder = "1.4.3"
enum_dispatch = "0.3.13"
deku = { version = "0.18.1", features = ["std"] }
dynasmrt = "3.0.0"
iced-x86 = { version = "1.21.0", features = ["encoder"] }
indexmap = "2.2.6"
index_vec = "0.1.4"
libc = "0.2.148"
memmap2 = "0.9"
num-traits = "0.2.16"
num_cpus = "1.13.1"
page_size = "0.6.0"
cache-size = "0.7.0"
parking_lot = "0.12.0"
parking_lot_core = "0.9.1"
smallvec = { version = "1.15.1", features = ["const_generics", "const_new", "union"] }
static_assertions = "1.1.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
tempfile = "3.8"
test_stubs = { git = "https://github.com/ykjit/test_stubs" }
thiserror = "2.0.12"
typed-index-collections = "3.1.0"
vob = "3.0.6"
ykaddr = { path = "../ykaddr" }
yksmp = { path = "../yksmp" }
zydis = "4.1.0"

[dependencies.object]
version = "0.37.1"
default-features = false
features = ["read_core", "elf"]

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
regex = "1.9"
ykbuild = { path = "../ykbuild" }
which = "8.0.0"

[features]
# When set, the `ykd` feature enables a number of features that are helpful for
# debugging the correctness and performance of an interpreter, most controlled
# by `YKD_*` environment variables.
ykd = []
# The `yk_testing` feature is purely for yk's internal use: do not use it
# externally.
yk_testing = []

[dev-dependencies]
cfgrammar = "0.13"
fm = "0.4.0"
lazy_static = "1.5.0"
lrlex = "0.13"
lrpar = "0.13"
mockall = "0.14.0"
rand = "0.9.0"
regex = { version = "1.9", features = ["std"] }
proptest = "1.6.0"
