[package]
name = "yksgi"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
libc = "0.2.97"
libffi = "3.0.0"
ykutil = { path = "../ykutil" }
yksmp = { path = "../yksmp" }
llvm-sys = "140"
memmap2 = "0.5.2"
capstone = "0.11.0"

[dependencies.object]
version = "0.28.3"
default-features = false
features = ["read_core", "elf"]

[features]
c_testing = []
