[package]
name = "yktrace"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
elf = "0.0.10"
fxhash = "0.2.1"
gimli = "0.26.1"
hwtracer = { path = "../hwtracer" }
intervaltree = "0.2.7"
libc = "0.2.117"
phdrs = { git = "https://github.com/softdevteam/phdrs" }
tempfile = "3.3.0"
ykllvmwrap = { path = "../ykllvmwrap" }
ykutil = { path = "../ykutil" }

[dev-dependencies]
fm = "0.2.1"
regex = "1.5.4"

[features]
yk_testing = []
