[package]
name = "yktrace"
version = "0.1.0"
authors = ["The Yk Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
elf = "0.7"
fxhash = "0.2.1"
gimli = "0.27"
hwtracer = { path = "../hwtracer" }
intervaltree = "0.2.7"
libc = "0.2.117"
tempfile = "3.3.0"
yktracec = { path = "../yktracec" }
ykutil = { path = "../ykutil" }

[dev-dependencies]
fm = "0.2.1"
regex = "1.5.4"

[features]
yk_testing = []
