[package]
name = "ykcompile"
version = "0.1.0"
authors = ["The Yorick Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynasmrt = "1.0.1"
hex = "0.4.2"
lazy_static = "1.4.0"
libc = "0.2.82"
ykpack = { path = "../ykpack" }
yktrace = { path = "../yktrace" }

[dev-dependencies]
fm = "0.2.0"
regex = "1.4.3"
