[package]
name = "ykpack"
version = "0.1.0"
authors = ["The Yorick Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
bincode = "1.3.1"
bitflags = "1.2.1"
fallible-iterator = "0.2.0"
fxhash = "0.2.1"
gimli = { version = "0.23.0", optional = true }
serde = { version = "1.0.118", features = ["derive"] }
indexmap = { version = "1.5.2", optional = true }
tempfile = { version = "3.1", optional = true }
memmap2 = { version = "0.2.0", optional = true }

[dependencies.object]
version = "0.22.0"
default-features = false
features = ["read_core", "elf"]
optional = true

[features]
write_utils = ["gimli", "tempfile", "memmap2", "object", "indexmap"]
