[package]
name = "tests"
version = "0.1.0"
authors = ["The Yorick Developers"]
edition = "2018"

[dependencies]
fm = "0.2.0"
untraced_api = { path = "../untraced_api", features=["testing"] }
libc = "0.2.82"
paste = "1.0"
regex = "1.4.3"
ykrt = { path = "../ykrt" }

[build-dependencies]
cc = "1.0.66"
