[package]
name = "ykrt"
version = "0.1.0"
authors = ["The Yorick Developers"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
num_cpus = "1"
parking_lot = "0.11"
parking_lot_core = "0.8"
strum = { version = "0.20", features = ["derive"] }
untraced_api = { path = "../untraced_api" }

[build-dependencies]
regex = "1.4.3"
